user-list-and-profile: IconButton and LinkButton small styles fixes

--- a/src/components/buttons/IconButton/styles.module.scss
+++ b/src/components/buttons/IconButton/styles.module.scss
@@ -14,5 +14,8 @@
     position: relative;
     top: 3px;
     left: -6px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
   }
 }
