--- a/src/components/buttons/LinkButton/styles.module.scss
+++ b/src/components/buttons/LinkButton/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/scss/variables";
+@import '../../../assets/scss/variables';
 
 .button {
   padding: 8px 8px;
@@ -14,5 +14,8 @@
     position: relative;
     top: 3px;
     left: -6px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
   }
 }
